// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar Snapshot should match snapshot 1`] = `
<div
  class="makeStyles-root-1"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-2 makeStyles-appBarEditor-4 MuiPaper-elevation0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              class="makeStyles-aImgStyling-12"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
          <div
            class="MuiGrid-root makeStyles-breadCrumb-5 MuiGrid-item"
          >
            / Lage
             
            /
            <span
              class="makeStyles-breadCrumbSubApp-6"
            >
               
               
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root makeStyles-paper-7 MuiGrid-item MuiGrid-grid-xs-true"
        >
          jest-test-org / jest-test-app
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-haspopup="true"
                aria-label="profilikon knapp"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-label="profilikon"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                    />
                    <title>
                      profilikon
                    </title>
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-15"
            >
              <div
                class="MuiPaper-root makeStyles-drawerMenuPaper-21 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
                style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
              >
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary makeStyles-menuItemText-19 MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logg ut
                      </span>
                    </div>
                  </div>
                </ul>
                <hr
                  class="MuiDivider-root makeStyles-divider-16"
                />
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiListItem-root makeStyles-mainMenuItem-20 MuiListItem-gutters MuiListItem-button"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root makeStyles-mainMenuItem-20"
                      >
                        Språk
                      </div>
                    </div>
                    <hr
                      class="MuiDivider-root makeStyles-divider-16"
                    />
                  </div>
                </ul>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-commonButton-22 makeStyles-closeButton-24 MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                meny
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root makeStyles-subHeader-8 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-9"
            href="/"
          >
            Om
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-8 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-9 makeStyles-subHeaderLinkActive-10"
            href="/ui-editor"
          >
            Lage
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-8 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-9"
            href="/texts"
          >
            Språk
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-8 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-9"
            href="/deploy"
          >
            Deploy
          </a>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBar Snapshot should match snapshot and not render subHeader menu 1`] = `
<div
  class="makeStyles-root-51"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-52 makeStyles-appBarEditor-54 MuiPaper-elevation0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              class="makeStyles-aImgStyling-62"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
          <div
            class="MuiGrid-root makeStyles-breadCrumb-55 MuiGrid-item"
          >
            / Lage
             
            /
            <span
              class="makeStyles-breadCrumbSubApp-56"
            >
               
               
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root makeStyles-paper-57 MuiGrid-item MuiGrid-grid-xs-true"
        >
          jest-test-org / jest-test-app
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-haspopup="true"
                aria-label="profilikon knapp"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-label="profilikon"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                    />
                    <title>
                      profilikon
                    </title>
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-65"
            >
              <div
                class="MuiPaper-root makeStyles-drawerMenuPaper-71 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
                style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
              >
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary makeStyles-menuItemText-69 MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logg ut
                      </span>
                    </div>
                  </div>
                </ul>
                <hr
                  class="MuiDivider-root makeStyles-divider-66"
                />
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiListItem-root makeStyles-mainMenuItem-70 MuiListItem-gutters MuiListItem-button"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root makeStyles-mainMenuItem-70"
                      >
                        Språk
                      </div>
                    </div>
                    <hr
                      class="MuiDivider-root makeStyles-divider-66"
                    />
                  </div>
                </ul>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-commonButton-72 makeStyles-closeButton-74 MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                meny
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBar Snapshot should match snapshot with no app or org 1`] = `
<div
  class="makeStyles-root-76"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-77 makeStyles-appBarDashboard-78 MuiPaper-elevation0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              class="makeStyles-aImgStyling-87"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
          <div
            class="MuiGrid-root makeStyles-breadCrumb-80 MuiGrid-item"
          >
             
            /
            <span
              class="makeStyles-breadCrumbSubApp-81"
            >
               
               
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root makeStyles-paper-82 MuiGrid-item MuiGrid-grid-xs-true"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-haspopup="true"
                aria-label="profilikon knapp"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-label="profilikon"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                    />
                    <title>
                      profilikon
                    </title>
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-90"
            >
              <div
                class="MuiPaper-root makeStyles-drawerMenuPaper-96 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
                style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
              >
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary makeStyles-menuItemText-94 MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logg ut
                      </span>
                    </div>
                  </div>
                </ul>
                <hr
                  class="MuiDivider-root makeStyles-divider-91"
                />
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiListItem-root makeStyles-mainMenuItem-95 MuiListItem-gutters MuiListItem-button"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root makeStyles-mainMenuItem-95"
                      >
                        Språk
                      </div>
                    </div>
                    <hr
                      class="MuiDivider-root makeStyles-divider-91"
                    />
                  </div>
                </ul>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-commonButton-97 makeStyles-closeButton-99 MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                meny
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBar Snapshot should match snapshot with subHeader and Publisere selection active 1`] = `
<div
  class="makeStyles-root-26"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-appBar-27 makeStyles-appBarEditor-29 MuiPaper-elevation0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              class="makeStyles-aImgStyling-37"
              href="/"
            >
              <img
                alt="Altinn logo"
                src="https://altinncdn.no/img/Altinn-logo-blue.svg"
              />
            </a>
          </div>
          <div
            class="MuiGrid-root makeStyles-breadCrumb-30 MuiGrid-item"
          >
            / Publisere
             
            /
            <span
              class="makeStyles-breadCrumbSubApp-31"
            >
               
               
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root makeStyles-paper-32 MuiGrid-item MuiGrid-grid-xs-true"
        >
          other-org / other-app
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div>
              <button
                aria-haspopup="true"
                aria-label="profilikon knapp"
                class="MuiButtonBase-root MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-label="profilikon"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                    />
                    <title>
                      profilikon
                    </title>
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-40"
            >
              <div
                class="MuiPaper-root makeStyles-drawerMenuPaper-46 MuiDrawer-paper MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
                style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
              >
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiListItemText-root"
                    >
                      <span
                        class="MuiTypography-root MuiListItemText-primary makeStyles-menuItemText-44 MuiTypography-body1 MuiTypography-displayBlock"
                      >
                        Logg ut
                      </span>
                    </div>
                  </div>
                </ul>
                <hr
                  class="MuiDivider-root makeStyles-divider-41"
                />
                <ul
                  class="MuiList-root MuiList-padding"
                >
                  <div>
                    <div
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiListItem-root makeStyles-mainMenuItem-45 MuiListItem-gutters MuiListItem-button"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="MuiListItemText-root makeStyles-mainMenuItem-45"
                      >
                        Språk
                      </div>
                    </div>
                    <hr
                      class="MuiDivider-root makeStyles-divider-41"
                    />
                  </div>
                </ul>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-commonButton-47 makeStyles-closeButton-49 MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                meny
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      >
        <div
          class="MuiGrid-root makeStyles-subHeader-33 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-34"
            href="/"
          >
            Om
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-33 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-34"
            href="/ui-editor"
          >
            Lage
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-33 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-34"
            href="/texts"
          >
            Språk
          </a>
        </div>
        <div
          class="MuiGrid-root makeStyles-subHeader-33 MuiGrid-item"
        >
          <a
            class="makeStyles-subHeaderLink-34"
            href="/deploy"
          >
            Deploy
          </a>
        </div>
      </div>
    </div>
  </header>
</div>
`;
